--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#03a651" />
     <meta name="description" content="Aplikasi pelacak keuangan" />
     <link rel="apple-touch-icon" href="/icon-192x192.png" />
+    <link rel="manifest" href="/manifest.json" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
